# Average_cost_bot

./: .env.dist  .gitignore  README.md  loader.py  main.py  pyproject.toml
data/: __init__.py  config.py  create_db.sql
handlers/: __init__.py
handlers/users/: __init__.py  analysis_handlers.py  average_cost_handlers.py  menu_handlers.py
keyboards/default/: __init__.py  analysis_menu.py  menu.py
states/: __init__.py  first_adding_url.py
tests/: testing_of_sql_functions.py
tests/testing_data/: testing_db.db
utils/booking_scrapping/: scrapper.py
utils/db_api/: sqlite.py
utils/google_sheets/: connect_to_sheets.py
utils/google_sheets_data/: calculations.py  connect_to_sheets.py
utils/misc/: prepare_data_for_analsis.py
