[tool.poetry]
name = "average_cost_bot"
version = "0.1.0"
description = ""
authors = ["Leonid Krapchatov <hellsing1998nsk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.14.3"
environs = "^9.3.3"
google-api-python-client = "^2.19.1"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
